fixed resizing on smaller screens

--- a/style/projects.scss
+++ b/style/projects.scss
@@ -5,6 +5,7 @@
   justify-content: start;
   flex-grow: 1;
   max-width: 1440px;
+  width: 100vw;
   margin: auto;
   .title {
     font-size: 1.5em;
@@ -53,7 +54,9 @@
       position: relative;
       flex-grow: 1;
       min-height: 300px;
-      min-width: 45vw;
+      min-width: 750px;
+      width: 55vw;
+      max-width: 900px;
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center left;
@@ -63,8 +66,8 @@
         position: absolute;
         z-index: 5;
         top: 0;
-        left: 20%;
-        height: 200%;
+        left: 10%;
+        height: 150%;
         width: 200%;
         background: #c2d969;
         transform: rotate(65deg);
@@ -77,11 +80,25 @@
     max-width: 1440px;
     width: 100%;
     // background-color: #2c2620;
-    flex-grow: 1;
     margin: 0 1em;
     max-height: 100%;
     overflow-x: scroll;
     overflow-y: hidden;
+    &::-webkit-scrollbar {
+      width: 5px;
+      height: 5px;
+    }
+    &::-webkit-scrollbar-track {
+      background-color: transparent;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: #c2d969;
+      border-radius: 16px;
+    }
+    &::-webkit-scrollbar-button {
+      display: none;
+    }
+
     .archive-projects {
       display: flex;
       justify-content: start;
